radio, EQ 지도 마커 표시 속도 최적화

--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -183,7 +183,7 @@
 	</script>
 
 	<script src="../JS/kakaoMap.js"></script>
-	<script src="../JS/radioData.js"></script>
-	<script src="../JS/eqData.js"></script>
+	<script src="../JS/radioData(beta).js"></script>
+	<script src="../JS/eqData(beta).js"></script>
 	<script src="../JS/button.js"></script>
 </html>
