--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -21,6 +21,12 @@
 				>
 					<head th:replace="common/header" />
 				</div>
+
+				<!--			방문자수 표시-->
+				<div class="visitCount">
+					방문자 수: <span th:text="${post.post}"></span>
+				</div>
+
 			</div>
 
 			<!-- 지도 영역 -->
