일일방문자 추가

--- a/src/main/resources/templates/map/index.html
+++ b/src/main/resources/templates/map/index.html
@@ -92,7 +92,7 @@
 								>누적 방문자: <span th:text="${post.post}"></span>명</span
 							>
 							<!-- 오늘 방문자 수 완성 됐을 시 작성 -->
-							<!-- <span class="todayVisit">오늘 방문자: <span th:text="${}"></span>명</span> -->
+							 <span class="todayVisit">오늘 방문자: <span th:text="${post.dailyPost}"></span>명</span>
 						</div>
 					</div>
 
