ContourMap 지도위에 표기되게 완성

--- a/src/main/resources/templates/test/testpinmap.html
+++ b/src/main/resources/templates/test/testpinmap.html
@@ -2,10 +2,11 @@
 	<meta charset="utf-8" />
 
 	<script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
-
+	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 
 <body>
+	<div id="contourMap" style="display: none;"></div>
 	<div id="map" style="width: 100%; height: 350px"></div>
 
 	<form action="/test" method="post">
@@ -41,13 +42,14 @@
 
 <!-- 지도용 script -->
 
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ff6d272e36cf8a9c0cc865875558ac29"></script>
+<script type="text/javascript"
+	src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ff6d272e36cf8a9c0cc865875558ac29&libraries=services"></script>
 
 <script>
 	var mapContainer = document.getElementById("map"), // 지도를 표시할 div
 		mapOption = {
 			center: new kakao.maps.LatLng(37.450701, 126.570667), // 지도의 중심좌표
-			level: 14, // 지도의 확대 레벨
+			level: 13, // 지도의 확대 레벨
 		};
 
 	var map = new kakao.maps.Map(mapContainer, mapOption);
@@ -87,26 +89,111 @@
 
 
 
+</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<script th:inline="none">
+
 	function GroundOverlay(bounds, imgSrc) {
 		this.bounds = bounds;
 		var node = this.node = document.createElement('div');
 		node.className = 'node';
 
+		var gradientDiv = this.div = document.createElement('div');
+		gradientDiv.style.position = 'unset';
+		gradientDiv.style.opacity = 0.6;
+
+
+		//linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.5) 2%, rgba(255,255,255,1) 5%, rgba(255,255,255,1) 95%, rgba(0, 0, 0, 0.5) 98 %, rgba(0, 0, 0, 0) 100 %) ';
+
+
 		var img = this.img = document.createElement('img');
 		img.style.position = 'absolute';
 		img.src = imgSrc;
+		img.className = 'contourMap'
 
-		node.appendChild(img);
+
+
+		node.appendChild(gradientDiv);
+		gradientDiv.appendChild(img);
 	}
-
+	// "AbstractOverlay":#AbstractOverlay 상속. 프로토타입 체인을 연결한다..
 	GroundOverlay.prototype = new kakao.maps.AbstractOverlay;
 
+	// 필수 구현 메소드.
+	// AbstractOverlay의 getPanels() 메소드로 MapPanel 객체를 가져오고
+	// 거기에서 오버레이 레이어를 얻어 생성자에서 만든 엘리먼트를 자식 노드로 넣어준다.
 	GroundOverlay.prototype.onAdd = function () {
 		var panel = this.getPanels().overlayLayer;
 		panel.appendChild(this.node);
 	};
 
-	// 줌인 아웃 시 이미지를 원하는 bounds값에 맞게 표출하기 위해 img style을 정의 및 선언합니다.
+	// 필수 구현 메소드.
+	// 생성자에서 만든 엘리먼트를 오버레이 레이어에서 제거한다.
+	GroundOverlay.prototype.onRemove = function () {
+		this.node.parentNode.removeChild(this.node);
+	};
+
+	// 필수 구현 메소드.
+	// 지도의 속성 값들이 변화할 때마다 호출된다. (zoom, center, mapType)
+	// 엘리먼트의 위치를 재조정 해 주어야 한다.
 	GroundOverlay.prototype.draw = function () {
 		var projection = this.getProjection();
 		var ne = projection.pointFromCoords(this.bounds.getNorthEast());
@@ -121,21 +208,233 @@
 		this.img.style.height = height + 'px';
 	}
 
-	GroundOverlay.prototype.onRemove = function () {
-		this.node.parentNode.removeChild(this.node);
-	};
-
+	//초기값 좌상단 [124.20796222050159, 42.366046008446546]
+	//좌상단 1/2 [124.39396537459614 ,37.64945785060459]
+	//우하단 [130.14530720470964, 32.91305919195217]
 	// LatLng, LatLngBounds 를 사용하는 코드로 변경해야 함.
-	var sw = new kakao.maps.LatLng(37.503, 127.022581);
-	ne = new kakao.maps.LatLng(37.5, 127.028581);
+	var sw = new kakao.maps.LatLng(42.366046008446546, 124.20796222050159); //37.450701, 126.570667
+	ne = new kakao.maps.LatLng(32.91305919195217, 130.14530720470964);
 
 	var bounds = new kakao.maps.LatLngBounds(sw, ne);
 
-	//var overlay = new GroundOverlay(bounds, 'C:/Users/user/Downloads/다운로드.png');
-	//overlay.setMap(map);
+	var overlay = new GroundOverlay(bounds,
+		'');
+	overlay.setMap(map);
+
+
+
+
+
+
+
+	///Contourmap 제작 함수 부분입니다. 
+	window.onload = eqDataPush = async () => {
+		const year = "2023";
+		const yeardata = await fetch(`/yearsearch?year=${year}`);
+
+		const res = await yeardata.text();
+		const eqJson = JSON.parse(res); // json 형식으로 읽기
+
+		//초기값 좌상단 [124.20796222050159, 42.366046008446546]
+		//좌상단 1/2 [124.39396537459614 ,37.64945785060459]
+		//우하단 [130.14530720470964, 32.91305919195217]
+		let coordival = [];
+		let coordinates = [[124.20796222050159, 42.366046008446546], [130.14530720470964, 32.91305919195217]];
+		let zValues = [null, null];//좌상단,우하단,null,null값넣어줌
+		// i 번째 json 형태에서 필요한 데이터 가져오기
+		for (let i = 0; i < eqJson.length; i++) {
+			let eqLat = eqJson[i].lat;
+			let eqLon = eqJson[i].lon;
+			let eqScale = eqJson[i].eqscale; // 규모
+
+			coordival = [eqLon, eqLat];
+			coordinates.push(coordival);
+			zValues.push(eqScale);
+
+		}
+
+		//위도와 경도를 input할 부분 임시 값 넣어져 있습니다.
+		//coordinates = [[0, 0], [30, 30], [19, 27], [21, 18], [12, 23], [28, 17], [26, 14], [17, 21], [23, 28], [22, 26], [25, 12], [5, 7]];
+		//zValues = [0, 0, 23, 78, 65, 97, 42, 13, 56, 89, 31, 999];
+
+		// coordinates에서 고유한 x,y좌표 추출 , x와 y 배열 추출 및 오름차순 정렬 
+		// coord => coord[1]: 각 좌표 쌍에서 y 좌표만 추출합니다.
+		const Xarray = Array.from(new Set(coordinates.map(coord => coord[0]))).sort((a, b) => a - b);
+		const Yarray = Array.from(new Set(coordinates.map(coord => coord[1]))).sort((a, b) => a - b);
+
+		// z 배열을 초기화하고, y배열의 크기만큼 길이산정, x배열 길이만큼 null로 채우기,(y두번써도됨)
+		const Zarray = Array.from({ length: Yarray.length }, () => Array(Xarray.length).fill(null));
+
+		// z 배열에 값을 할당
+		for (let index = 0; index < coordinates.length; index++) {
+			const [xCoord, yCoord] = coordinates[index];
+			const zValue = zValues[index];
+			const i = Yarray.indexOf(yCoord);
+			const j = Xarray.indexOf(xCoord);
+			Zarray[i][j] = zValue;
+		}
+		console.log(Zarray)
+
+		var trace1 = {
+			z: Zarray,
+			x: Xarray,
+			y: Yarray,
+
+			connectgaps: true,
+			zsmooth: 'best',
+			type: 'heatmap', //histogram2dcontour, contour, heatmap
+
+			showscale: false,
+			autocolorscale: 'hot',
+			// reversescale: true, zmax: 2.5, zmin: -2.5
+
+			//colorscale: [[0, "rgb(  0,  0,  0)"], [0.3, "rgb(90,  0,  0)"], [0.6, "rgb//(180,0,  0)"], [1, "rgb(255,0,0)"]],
+
+			//name: 'density',
+			//ncontours: 20,
+			//colorscale: 'Hot',
+			//reversescale: true,
+			//showscale: false,
+			//type: 'histogram2dcontour'
+
+		};
+
+		var data = [trace1];
+
+		var layout = {
+			autosize: false,
+
+			width: 500,
+			height: 1000,
+			margin: {
+				l: 0,
+				r: 0,
+				b: 0,
+				t: 0,
+				pad: 0
+			},
+
+			//title: 'Simple Contour Plot'
+		};
+
+		Plotly.newPlot('contourMap', data, layout);
+
+		Plotly.toImage('contourMap', {
+			format: 'png',
+			width: 500,
+			height: 1000
+		}).then(function (dataUrl) {
+			var img = new Image();
+			img.src = dataUrl;
+
+			var overlay = new GroundOverlay(bounds,
+				dataUrl);
+			overlay.setMap(map);
+			//console.log(dataUrl)
+			console.log('출력되었습니다')
+			//document.querySelector('.contourMap').src = img;
+		});
+	}
 
 </script>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 현재 미세정보 출력해주는 테스트 항목입니다. -->
 
 <script>
 	const mesetest = async () => {
